<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GpsTracker</string>
    <string name="action_settings">Settings</string>
	<string name="register_fragment_label_username">Username</string>
	<string name="register_fragment_button_login">Log in</string>
	<string name="register_fragment_name_not_set">Username has not been set</string>
	<string name="log_fragment_message_not_set">Message has not been set</string>
	<string name="log_fragment_row_title_action">Type: </string>
	<string name="log_fragment_row_title_sender">Sender: </string>
	<string name="log_fragment_row_title_message">Message: </string>
	<string name="log_default_action">Message</string>
	<string name="log_default_sender">Gpstracker</string>
	<string name="log_default_message">No recordings have been made</string>
	<string name="log_fragment_title_receiver">Receiver:</string>
	<string name="log_fragment_title_button_send">submit</string>
	<string name="log_logged_out"> logged out</string>
	<string name="log_you_logged_out">you got logged out</string>
	<string name="log_user">user </string>
	<string name="configuration_fragment_title_send_location_on_time_change">Send location after n minutes</string>
	<string name="configuration_fragment_title_minutes">Minutes</string>
	<string name="configuration_fragment_title_send_location_on_location_change">Send location after passed n meters</string>
	<string name="configuration_fragment_title_meters">Meters</string>
	<string name="configuration_fragment_zoom_level">Zoom level</string>
	<string name="incomming_message_type_1">personal message</string>
	<string name="incomming_message_type_2">broadcast</string>
	<string name="incomming_message_type_3">logged in</string>
	<string name="incomming_message_type_4">logged out</string>
	<string name="tab_log">messages</string>
	<string name="tab_map">map</string>
	<string name="tab_configuration">configuration</string>
	<string name="tab_register">register</string>
	<string name="v4button_unregister">unregister</string>
	
</resources>