<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ListView 
	    android:id="@+id/listView_actions"
	    android:layout_width="fill_parent"
	    android:layout_height="100dp" />

	<TextView
	    android:id="@+id/textView_actions_send"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/log_fragment_title_receiver" />

	<EditText
	    android:id="@+id/editText_actions_send"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10" 
	    android:inputType="text">
	    <requestFocus />
	</EditText>

	<TextView
	    android:id="@+id/textView_actions_message"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/log_fragment_row_title_message" />

	<EditText
	    android:id="@+id/editText_actions_message"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:inputType="textMultiLine" />

	<Button
	    android:id="@+id/button_actions_send"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/log_fragment_title_button_send" />

	<Button
	    android:id="@+id/v4button_unregister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:visibility="invisible"
	    android:text="@string/v4button_unregister" />
	
</LinearLayout>