<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/v4tab_button_configurations"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/tab_configuration" />

    <Button
        android:id="@+id/v4tab_button_log"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/v4tab_button_configurations"
        android:layout_alignBottom="@+id/v4tab_button_configurations"
        android:layout_toLeftOf="@+id/v4tab_button_configurations"
        android:text="@string/tab_log" />

    <Button
        android:id="@+id/v4tab_button_register"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/v4tab_button_log"
        android:layout_alignBottom="@+id/v4tab_button_log"
        android:layout_toLeftOf="@+id/v4tab_button_log"
        android:text="@string/tab_register" />

    <FrameLayout 
        android:id="@+id/v4contentFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_below="@+id/v4tab_button_configurations"/>
	
</RelativeLayout>